Add AbstractMenu and DynamicCommand dependencies

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,6 @@ name: ConfigMenu
 author: Flowsqy
 version: "${project.version}"
 main: fr.flowsqy.configmenu.ConfigMenuPlugin
+depend:
+  - DynamicCommand
+  - AbstractMenu
