--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: ConfigMenu
 author: Flowsqy
 version: "${project.version}"
 main: fr.flowsqy.configmenu.ConfigMenuPlugin
+api-version: "1.16"
 depend:
   - DynamicCommand
   - AbstractMenu
