Add message registry

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
                 <includes>
-                    <include>*.yml</include>
+                    <include>*</include>
                 </includes>
             </resource>
         </resources>
