Add 'close' option

--- a/src/main/resources/commands.yml
+++ b/src/main/resources/commands.yml
@@ -58,6 +58,7 @@
 #        amount: [amount]
 #      inventory: [inventory-path]
 #      message: [message-id]
+#      close: [close-status]
 #      slots:
 #        - <slot-1>
 #        - <slot-2>
@@ -87,6 +88,7 @@
 # [name] is the name of the item
 # [inventory-path] is a valid inventory path (see above)
 # [message-id] is an identifier specified in the file 'message-registry.lang'
+# [close-status] is a boolean (false by default). 'true' means that the inventory will be closed when the player click
 # [lore-1] [lore-2] ... are the line of description of the item
 # [amount] is an integer between 1 and 64 for the quantity of the item
 # <slot-1> <slot-2> ... are integer to determine where the item will be in the inventory (between 0 and line * 9 - 1)
